--- a/support.html
+++ b/support.html
@@ -12,6 +12,8 @@
 
 
     <!-- Bootstrap core CSS -->
+    
+    <!-- Bootstrap core CSS -->
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
