--- a/login-varify.html
+++ b/login-varify.html
@@ -61,7 +61,7 @@
             }
 
             .login-container {
-                background-color: #fff;
+                background-color: #152137;
                 border-radius: 10px;
                 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
                 width: 300px;
@@ -71,7 +71,7 @@
 
             .login-container h2 {
                 margin-bottom: 20px;
-                color: #333;
+                color: darkgrey;
             }
 
             .login-container input[type="text"],
@@ -81,10 +81,12 @@
                 margin: 10px -15px;
                 border: 1px solid #ccc;
                 border-radius: 5px;
+                color: white;
+                background-color: #152137;
             }
 
             .login-container button {
-                background-color: #007bff;
+                background-color: orange;
                 color: #fff;
                 border: none;
                 border-radius: 5px;
