--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ https://templatemo.com/tm-557-grad-school
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
-            <h2>Contact/Support</h2>
+            <h2>Seek Guidance</h2>
           </div>
         </div>
         <div class="col-md-6">
