--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-557-grad-school
 
     <div class="video-overlay header-text">
       <div class="caption">
-        <h6>365Connect Community</h6>
+        <h6><span style="color: #feb70c;">3</span><span style="color: #5ea904;">6</span><span style="color: #04a0ed;">5</span><span style="color: white;">C</span><span style="text-transform: lowercase;">onnect</span> C<span style="text-transform: lowercase;">ommunity</span></h6>
         <h2> Building <em>Power</em> Users</h2>
         <div class="main-button">
           <div class="scroll-to-section"><a href="#section2">Discover more</a></div>
