--- a/events.html
+++ b/events.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
+    <meta property="og:title" content="365Connect Community">
+    <meta property="og:description" content="365Connect is a community dedicated to promoting and advancing the adoption of Microsoft D365 and Power Platform technologies. Our primary goal is to foster a supportive environment where individuals can learn, teach, and collaborate on all things related to these powerful tools. Whether you're an experienced user or just starting out, we welcome members from any part of the globe to join us in our mission to promote and develop this community.">
+    <meta property="og:image" content="https://365connectcommunity.github.io/preview.png">
+    <meta property="og:url" content="https://365connectcommunity.github.io/">
+
+    <!---->
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <meta charset="utf-8">
+    <!-- <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="365Connect is a community dedicated to promoting and advancing the adoption of Microsoft D365 and Power Platform technologies. Our primary goal is to foster a supportive environment where individuals can learn, teach, and collaborate on all things related to these powerful tools. Whether you're an experienced user or just starting out, we welcome members from any part of the globe to join us in our mission to promote and develop this community.">
-    <meta name="author" content="Shaheer Ahmad">
+    <meta name="author" content="Shaheer Ahmad"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     
