--- a/additional/frame-members.html
+++ b/additional/frame-members.html
@@ -161,7 +161,7 @@
                         </div>
                         <div class="d-flex flex-row-reverse">
                             <input class="form-control" style=" width: 30% !important;" type="text" id="search"
-                                placeholder="Search by name or email">
+                                placeholder="Search by name">
                             <button class="btn btn-primary" id="search"
                                 style="margin-right: 10px; background-color: orange !important;border-color: orange !important;"
                                 onclick="performSearch()">Search</button>
