--- a/additional/frame-members.html
+++ b/additional/frame-members.html
@@ -148,7 +148,7 @@
                 <center>
                     <br>
                     <h2 style="font-size: 34px; font-weight: 700; color: white !important;">Our Family</h2>
-                    <hr style=" border: 2px solid white; border-radius: 20px; width: 500px;">
+                    <hr style=" border: 2px solid white; border-radius: 20px; width: 100%;">
                     <br>
                 </center>
             </div>
