--- a/community-members.html
+++ b/community-members.html
@@ -40,7 +40,7 @@
         iframe {
             width: 100%;
             margin-top: 80px;
-            height: 160vh;
+            height: inherit;
             border: none; /* Optional: Removes the iframe border */
         }
     </style>
