--- a/team-members.html
+++ b/team-members.html
@@ -40,7 +40,7 @@
         iframe {
             width: 100%;
             margin-top: 80px;
-            height: 120vh;
+            height: inherit;
             border: none; /* Optional: Removes the iframe border */
         }
         
