--- a/my-profile.html
+++ b/my-profile.html
@@ -44,7 +44,7 @@
     <header class="main-header clearfix" role="header">
         <div class="logo">
             <img id="header-logo" style="height: 50px; margin-right: 20px;" src="./favicon.ico">
-            <a href="#" style="text-decoration: none; font-size: 29px !important;"><em></em><span
+            <a href="./index.html" style="text-decoration: none; font-size: 29px !important;"><em></em><span
                     style="color: #feb70c;">3</span><span style="color: #5ea904;">6</span><span
                     style="color: #04a0ed;">5</span><span style="color: white;">C</span><span
                     style="text-transform: lowercase;">onnect</span></a><!--#ce392c;-->
