--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ https://templatemo.com/tm-557-grad-school
           -->
       </div>
       <center>
-        <h1 style="align-self: center !important; color: white !important; ">Comming Soon!</h1>
+        <h1 style="align-self: center !important; color: white !important; ">Coming Soon!</h1>
       </center>
 
     </div>
