--- a/events.html
+++ b/events.html
@@ -57,33 +57,25 @@
       </header>
 
     <div class="loading" id="loading">Loading&#8230;</div>
-    <div class="header" style="height: 50vh;">
+    <div class="header" style="height: 50vh !important;">
 
 
         <div class="sides">
-            
-            <!-- <a href="./index.html" class="logo">🔙 </a> -->
             <!-- search-->
-            <!-- <div class="box">
-                <div class="container-2">
-                    <span class="icon">
-                        <i class="fa fa-search"></i>
-                    </span>
-                    <input type="search" id="search" placeholder="Search...">
-                </div>
-            </div> -->
-            <!-- search-->
+            <a href="./index.html" class="logo">🔙 </a>
+            <!-- search end-->
+            <a href="#" class="logo" style="display: none;">Events</a>
         </div>
 
 
-        <!-- <div class="sides">
+        <div class="sides">
             <a href="#" class="menu" style=" display: none;"> </a>
 
 
-        </div> -->
-        <div class="info">
-            <!--<h4><a href="https://www.linkedin.com/in/shaheer-ahmad-ch/">Shaheer Ahmad</a></h4> -->
-            <h2 style=" margin-top: 30px !important;">365Connect Community</h2>
+        </div>
+        <div class="info" style="padding: 0 !important;">
+            <h4><a href="https://www.linkedin.com/in/shaheer-ahmad-ch/"></a></h4>
+            <h2>365Connect Community</h2>
             <div class="meta">
                 <a href="https://www.linkedin.com/company/365-connect-community" target="_b" class="author"></a><br>
                 <a href="https://www.linkedin.com/in/shaheer-ahmad-ch" target="_b"></a>
