--- a/additional/frame-team.html
+++ b/additional/frame-team.html
@@ -62,9 +62,9 @@
                   <h2 style="color:white !important;">${member.sa_firstname} ${member.sa_lastname}</h2>
                   <h3 style="color:white !important;">${member.sa_designation}</h3>
                   <div class="team-social">
-                    <a class="social-fb" href="${member.sa_facebook}"><i class="fab fa-facebook-f"></i></a>
-                    <a class="social-li" href="${member.sa_linkedin}"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="social-in" href="${member.sa_instagram}"><i class="fab fa-instagram"></i></a>
+                    <a class="social-fb" href="${member.sa_facebook}" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-li" href="${member.sa_linkedin}" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-in" href="${member.sa_instagram}" target="_blank"><i class="fab fa-instagram"></i></a>
                   </div>
                 </div>
             </div>
