--- a/index copy.html
+++ b/index copy.html
@@ -38,8 +38,7 @@ TemplateMo 557 Grad School
 https://templatemo.com/tm-557-grad-school
 
 -->
-<style>
-</style>
+
 </head>
 
 <body>
@@ -553,6 +552,8 @@ https://templatemo.com/tm-557-grad-school
   <script src="assets/js/video.js"></script>
   <script src="assets/js/slick-slider.js"></script>
   <script src="assets/js/custom.js"></script>
+  
+<script src="./header.js"></script>
   <script>
     document.getElementById("loading").style.display = "none";
     if (screen.height > screen.width){
