--- a/additional/frame-members.html
+++ b/additional/frame-members.html
@@ -147,7 +147,7 @@
             <div class="row justify-content-center">
                 <center>
                     <br>
-                    <h2 style="font-size: 54px; font-weight: 700; color: white !important;">Our Family</h2>
+                    <h2 style="font-size: 54px; font-weight: 700; color: white !important;">Our Members</h2>
                     <hr style=" border: 2px solid white; border-radius: 20px; width: 100%;">
                     <br>
                 </center>
