--- a/my-certificates.html
+++ b/my-certificates.html
@@ -318,10 +318,10 @@
                         const data = await response.json();
                         return data;
                     } else {
-                        showError1("No Events Registered", "danger");
+                        showError1("No Certificates Recieved", "warning");
                     }
                 } catch (error) {
-                    showError1("No Events Registered", "danger");
+                    showError1("No Certificates Revieved", "warning");
                 }
             }
 
