--- a/additional/frame-members.html
+++ b/additional/frame-members.html
@@ -266,7 +266,7 @@
             redirect: 'follow'
         };
 
-        fetch("https://prod-43.southeastasia.logic.azure.com:443/workflows/9cbe8062e150427caadf65f61c9c4b9a/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=mQoYIY9NWlE-6BAKK3ODx8lEw2XUabjHt885roy77Rs", requestOptions)
+        fetch("https://prod-107.westeurope.logic.azure.com:443/workflows/911c8454b01946eb88b33cc200e0cc33/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=lVzW4lLPwwAwwok5lGZ7WzaEBM2UW6r_-40cUwE86vQ", requestOptions)
             .then(response => response.json())
             .then(result => {
                 jsonResponse = result; // Store the JSON response in the jsonResponse array
