--- a/additional/frame-team.html
+++ b/additional/frame-team.html
@@ -73,7 +73,7 @@
         }
   
         // Fetch the JSON data
-        fetch("https://prod-07.southeastasia.logic.azure.com:443/workflows/024ae8f1f73646b08229349634f4d430/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=JB7ul8vwAU7mhwpUmucWvg5VZyfaUT1JLmRbgLrcAgw")
+        fetch("https://prod-72.westeurope.logic.azure.com:443/workflows/957b2e51c16540ff8c63857a67a6a0e6/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=VZ_w69-oK1l9eSjf83FxPTXDpqr-GnposYU1D15354g")
           .then((response) => response.json()) // Parse JSON from the response body
           .then((responseData) => {
             if (Array.isArray(responseData)) { // Check if responseData is an array
