--- a/blog.html
+++ b/blog.html
@@ -351,4 +351,4 @@
 
     </script>
     <script
-        src="https://shaheer365.blogspot.com/feeds/posts/default?max-results=500&alt=json-in-script&callback=loadtoc"></script>
+        src="https://365connectcommunity.blogspot.com/feeds/posts/default?max-results=500&alt=json-in-script&callback=loadtoc"></script>
