--- a/login.html
+++ b/login.html
@@ -247,7 +247,7 @@
                 redirect: 'follow'
             };
 
-            fetch("https://prod-51.southeastasia.logic.azure.com:443/workflows/4ec99569bce8405997dfbf65e7c8332c/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=0YInkgvREn7KdFoUwWU9RNovgiX3cGnu24AQ0Ho-GT0", requestOptions)
+            fetch("https://prod-43.westeurope.logic.azure.com:443/workflows/6925f68ce8a842d8893aa7a606a6c8f4/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=-rUEpqm-E6NB2lrmxYrhX-CEj6IKu_-asLVQ_Qkcv4I", requestOptions)
                 .then(response => {
                     if (response.status === 200) {
                         // Parse the response body as JSON
