--- a/register.html
+++ b/register.html
@@ -309,7 +309,7 @@
             redirect: 'follow'
         };
 
-        const apiUrl = "https://prod-54.southeastasia.logic.azure.com:443/workflows/ec084d3691234b458d24d5ec70f8e8b5/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=GenJ5EF13FI94PR3kMFN5CcC3H9jDQYAw0i2sE5Idro";
+        const apiUrl = "https://prod-139.westeurope.logic.azure.com:443/workflows/9c9e4efc9a5549b18d35f849eca29e67/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=sOOm-RsST2gGm4qNFOXmganrmS27F2BxzXzKtjStyyQ";
 
         // Function to fetch event data from the API
         async function fetchEventData() {
@@ -420,7 +420,7 @@
                     redirect: 'follow'
                 };
 
-                fetch("https://prod-32.southeastasia.logic.azure.com:443/workflows/277068ad549a4568a4b8ab73f3eddd4f/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=ngiAZ6qtk3lG-ozSR9Gj-lva22Bl3nLAo5gzWURUS9w", requestOptions)
+                fetch("https://prod-83.westeurope.logic.azure.com:443/workflows/d92dc5c271c540f8aa522dcd42d25037/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=pkFf5ipzCW2UTr7dWvyHhZ11uDg4of8tvIfgcS303Js", requestOptions)
                     .then(response => {
                         if (response.status === 200) {
                             // Registration was successful
