--- a/support.html
+++ b/support.html
@@ -338,7 +338,7 @@
                     redirect: 'follow'
                 };
 
-                fetch("https://prod-47.southeastasia.logic.azure.com:443/workflows/46b0074054a84e919e0c6ed8c656aa76/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=dx3YJpOrWCsYEZp_53p8uUFz1xZjLf4wz4DKGzwiH1o", requestOptions)
+                fetch("https://prod-136.westeurope.logic.azure.com:443/workflows/7ee4de0f92d442fd8547108b007ad08a/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=ucJm0SiRYORTLODpK8UCbIP7UorZjtBu3UeQVQsaPGI", requestOptions)
                     .then(response => {
                         if (response.status === 200) {
                             // Registration was successful
