--- a/events.html
+++ b/events.html
@@ -242,7 +242,7 @@ document.getElementById("event-search").addEventListener("input", filterPastEven
             headers: myHeaders1,
             redirect: 'follow'
         };
-        const apiUrl1 = "https://prod-40.southeastasia.logic.azure.com:443/workflows/133ffc3632e14b338c946ead39b702bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=cAmOD1oq-z3We3B9lZe8LBvkPJSOgf9yYiKMC8r3Jfk";
+        const apiUrl1 = "https://prod-219.westeurope.logic.azure.com:443/workflows/08239d2cedcf41fc9fc197aacd628218/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=0mXHdglVvx_N1yD8YvLMm5vGq67z3X8vny11Y3UbL7U";
 
         var myHeaders = new Headers();
         myHeaders.append("type", "UpComing");
@@ -252,7 +252,7 @@ document.getElementById("event-search").addEventListener("input", filterPastEven
             headers: myHeaders,
             redirect: 'follow'
         };
-        const apiUrl = "https://prod-40.southeastasia.logic.azure.com:443/workflows/133ffc3632e14b338c946ead39b702bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=cAmOD1oq-z3We3B9lZe8LBvkPJSOgf9yYiKMC8r3Jfk";
+        const apiUrl = "https://prod-219.westeurope.logic.azure.com:443/workflows/08239d2cedcf41fc9fc197aacd628218/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=0mXHdglVvx_N1yD8YvLMm5vGq67z3X8vny11Y3UbL7U";
 
         // Function to fetch event data from the API
         async function fetchEventData() {
