--- a/become-contributor.html
+++ b/become-contributor.html
@@ -279,7 +279,7 @@
                 <div class="content-text">
                     <p class="content-text" style="margin-left: 40px;margin-top: 10px;">Contribute to our GitHub repository with sample solutions or improvements. Here's how:</p>
                     <ol style="list-style-type: decimal; margin-left: 60px;">
-                        <li style="margin-top: 10px;">Fork our Sample Solutions <a href="<LINK_TO_REPO>" target="_blank">GitHub repository</a>.</li>
+                        <li style="margin-top: 10px;">Fork our Sample Solutions <a href="https://github.com/365ConnectCommunity/sample-solutions" target="_blank">GitHub repository</a>.</li>
                         <li style="margin-top: 10px;">Create a new branch for your changes.</li>
                         <li style="margin-top: 10px;">Add your sample solution or make improvements.</li>
                         <li style="margin-top: 10px;">Submit a pull request to merge your changes into our repository.</li>
@@ -290,7 +290,7 @@
 
             <div class="step">
                 <span class="step-number">3.</span>
-                <span class="step-description">Share Content and Events:</span>
+                <span class="step-description">Share Content and Events: (Coming Soon)</span>
                 <div class="content-text">
                     <p class="content-text" style="margin-left: 40px;margin-top: 10px;">Help us by sharing valuable content and information about events related to D365 and Power Platform. Here's how:</p>
                     <ol style="list-style-type: decimal; margin-left: 60px;">
@@ -316,7 +316,7 @@
 
             <div class="step">
                 <span class="step-number">5.</span>
-                <span class="step-description">Update Our Website:</span>
+                <span class="step-description">Update Our Website: (Beta)</span>
                 <div class="content-text">
                     <p class="content-text" style="margin-left: 40px;margin-top: 10px;">If you notice any bugs or have suggestions for improving our website, you can contribute by forking our repository and submitting a pull request with your changes. Here's how:</p>
                     <ol style="list-style-type: decimal; margin-left: 60px;">
