--- a/become-contributor.html
+++ b/become-contributor.html
@@ -263,7 +263,7 @@
             <br>
             <div class="step">
                 <span class="step-number">1.</span>
-                <span class="step-description">Submit a Community Blog:</span>
+                <span class="step-description">Submit a Community Blog: (Beta)</span>
                 <div class="content-text">
                     <p class="content-text" style="margin-left: 40px;margin-top: 10px;">If you have valuable insights, tips, or knowledge related to D365 and Power Platform, you can contribute by writing a community blog. Here's how:</p>
                     <ol style="list-style-type: decimal; margin-left: 60px;">
