--- a/become-contributor.html
+++ b/become-contributor.html
@@ -268,7 +268,7 @@
                     <p class="content-text" style="margin-left: 40px;margin-top: 10px;">If you have valuable insights, tips, or knowledge related to D365 and Power Platform, you can contribute by writing a community blog. Here's how:</p>
                     <ol style="list-style-type: decimal; margin-left: 60px;">
                         <li style="margin-top: 10px;">Fill out the <a href="<LINK_TO_FORM>" target="_blank">Community Blog Submission Form</a> with your blog post details.</li>
-                        <li style="margin-top: 10px;">Our team will review your submission, and once approved, it will be published on our website.</li>
+                        <li style="margin-top: 10px;">Our team will review your submission, and once approved, it will be published on our <a href="https://365connectcommunity.github.io/blog.html" target="_blank">Community Blog</a>.</li>
                     </ol>
                 </div>
             </div>
